# Human_avoidance

./: CMakeLists.txt  LICENSE  dependencies.sh  readme.md  script.sh
.github/workflows/: CI.yml
Doxygen/: Doxyfile
Doxygen/html/: ____init_____8py.html  _cheat_sheet_8md.html  _cook_book_8md.html  _design_doc_8md.html  _frequently_asked_questions_8md.html  _human__detector_8cpp.html  _human__detector_8cpp__incl.map  _human__detector_8cpp__incl.md5  _human__detector_8hpp.html  _human__detector_8hpp__dep__incl.map  _human__detector_8hpp__incl.map  _human__detector_8hpp__incl.md5  _known_issues_8md.html  _primer_8md.html  _pump_manual_8md.html  _samples_8md.html  _v1__5___documentation_8md.html  _v1__5___f_a_q_8md.html  _v1__5___primer_8md.html  _v1__5___xcode_guide_8md.html  _v1__6___advanced_guide_8md.html  _v1__6___f_a_q_8md.html  _v1__6___samples_8md.html  _v1__6___xcode_guide_8md.html  _v1__7___advanced_guide_8md.html  _v1__7___documentation_8md.html  _v1__7___pump_manual_8md.html  _v1__7___samples_8md.html  _xcode_guide_8md.html  annotated.html  annotated_dup.js  app_2_c_make_lists_8txt.html  app_2main_8cpp.html  ast_8py.html  camera_8cpp__incl.map  camera_8hpp.html  camera_8hpp__dep__incl.map  camera_8hpp__dep__incl.md5  camera_8hpp__incl.map  camera__test_8cpp.html  (+1538 more)
Doxygen/latex/: ____init_____8py.tex  _advanced_guide_8md.tex  _cheat_sheet_8md.tex  _cook_book_8md.tex  _design_doc_8md.tex  _f_a_q_8md.tex  _frequently_asked_questions_8md.tex  _human__detector_8cpp.tex  _human__detector_8cpp__incl.md5  _human__detector_8hpp__dep__incl.md5  _known_issues_8md.tex  _primer_8md.tex  _samples_8md.tex  _v1__5___documentation_8md.tex  _v1__5___f_a_q_8md.tex  _v1__5___primer_8md.tex  _v1__5___pump_manual_8md.tex  _v1__5___xcode_guide_8md.tex  _v1__6___primer_8md.tex  _v1__6___pump_manual_8md.tex  _v1__6___samples_8md.tex  _v1__7___advanced_guide_8md.tex  _v1__7___documentation_8md.tex  _v1__7___f_a_q_8md.tex  _v1__7___pump_manual_8md.tex  _v1__7___xcode_guide_8md.tex  _xcode_guide_8md.tex  app_2_c_make_lists_8txt.tex  class_base.tex  (+763 more)
app/: CMakeLists.txt  Human_detector.cpp  camera.cpp  data_reader.cpp  detect.cpp  main.cpp  modelConfig.cpp  track.cpp  transformation.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/: Doxyfile
include/: Human_detector.hpp  camera.hpp  data_reader.hpp  detect.hpp  modelConfig.hpp  track.hpp  transformation.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  camera_test.cpp  data_read_test.cpp  detect_test.cpp  dum_test.cpp  human_detect_test.cpp  main.cpp  modelConfig_test.cpp  test.cpp  test_data_read.cpp  track_test.cpp  transformation_test.cpp
(+2012 files in other folders)
